Fix v3 bug-fix gaps: network packet bounds, dedicated server crashes, and GUI caching
- Applied FriendlyByteBuf maximum bounds (32767) across all Forge and Fabric packets to prevent EncoderException disconnects.
- Fixed a BootstrapMethodError in OpenGuiPacket crashing dedicated servers by abstracting client-side execution to ClientPacketHandler and ClientScreenManager.
- Resolved RuntimeDistCleaner crashes by fully decoupling server-side AbstractContainerMenu constructors from client-side caching logic, moving cache injection into Screen initialization.
- Secured all 14 client-bound Forge packets via DistExecutor.unsafeRunWhenOn to prevent eager loading of ClientPacketHandler from crashing the server.
- Fixed Free Reward Tab (EconomyManagementScreen) failing to persist ItemStack settings and constantly showing Unsaved Changes dialog by adding freeRewardItem syncing.
- Fixed missing GCAdvisor notifications for admins/clients by rewiring hooks across ClientConnectionHandler/ClientSetup and UpdateHooks.